# zk-bug-finder-playground

./: LICENSE  README.md
halo2-examples/: Cargo.toml  README.md
halo2-examples/src/: addition.rs  arithmetic.rs  is_zero_gadget.rs  iszero.rs  ite.rs  lib.rs  range.rs
llm-test/: README.md  gpt-4-plain-urls.json  gpt-4-plain.py  scroll-zkevm-tob1-1.json  scroll-zkevm-tob1-10.json  scroll-zkevm-tob1-12.json  scroll-zkevm-tob1-13.json  scroll-zkevm-tob1-14.json  scroll-zkevm-tob1-15a.json  scroll-zkevm-tob1-15b.json  scroll-zkevm-tob1-15c.json  scroll-zkevm-tob1-2.json  scroll-zkevm-tob1-20.json  scroll-zkevm-tob1-21.json  scroll-zkevm-tob1-23.json  scroll-zkevm-tob1-24.json  scroll-zkevm-tob1-25.json  scroll-zkevm-tob1-26.json  scroll-zkevm-tob1-3.json  scroll-zkevm-tob1-5a.json  scroll-zkevm-tob1-5b.json  scroll-zkevm-tob1-7.json  scroll-zkevm-tob1-9.json  scroll-zkevm-tob2-1.json  scroll-zkevm-tob2-2.json  scroll-zkevm-tob2-6.json  scroll-zkevm-tob2-7.json  scroll-zkevm-tob2-8.json  scroll-zkevm-tob2-9.json  scroll-zkevm-tob3-13.json  scroll-zkevm-tob3-4.json  scroll-zkevm-tob3-9.json  shared_conversations.json
trying-tree-sitter/: .gitignore  README.md  callop_bug.py  detector.py  main.py  print_function_call.py  utils.py
trying-tree-sitter/checkers/: print_function_call.py
