[package]
name = "halo2-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", tag = "v0.4.0" }

[[bin]]
name = "addition"
path = "src/addition.rs"

[[bin]]
name = "arithmetic"
path = "src/arithmetic.rs"

[[bin]]
name = "ite"
path = "src/ite.rs"